--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@
 	position: absolute;
 	bottom: 0px;
 	left: 50px;
+	z-index: -1;
+}
+
+.ui-widget-header {
+	background: #f78;
 }
 
 body {
@@ -19,10 +24,10 @@ body {
 
 
 /* Code for progress bar */
-#progress-bar {
-    width: 0;
+#progressBar {
+    width: 300px;
 	z-index: 1;
-    background: #f78;
+    background: #e9e9e9;
     text-align: center;
     overflow: hidden;   
 }
